@@ -3,11 +3,14 @@ package com.quickbite.cart.cartservice.service.serviceImpl;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import com.quickbite.cart.cartservice.client.MenuClient;
+import com.quickbite.cart.cartservice.dto.external.MenuItemSnapshotDto;
 import com.quickbite.cart.cartservice.dto.requestDto.CartItemRequestDto;
 import com.quickbite.cart.cartservice.dto.requestDto.CartRequestDto;
 import com.quickbite.cart.cartservice.dto.responseDto.CartItemResponseDto;
@@ -20,52 +23,70 @@ import com.quickbite.cart.cartservice.repository.CartItemRepository;
 import com.quickbite.cart.cartservice.repository.CartRepository;
 import com.quickbite.cart.cartservice.service.CartService;
 
-import lombok.extern.slf4j.Slf4j;
-
 @Service
-@Slf4j
 public class CartServiceImpl implements CartService {
 
-    @Autowired
-    private CartRepository cartRepository;
+    private static final Logger log = LoggerFactory.getLogger(CartServiceImpl.class);
 
-    @Autowired
-    private CartItemRepository cartItemRepository;
+    private final CartRepository cartRepository;
+    private final CartItemRepository cartItemRepository;
+    private final MenuClient menuClient;
 
-    //GET CART
+    public CartServiceImpl(CartRepository cartRepository,
+                           CartItemRepository cartItemRepository,
+                           MenuClient menuClient) {
+        this.cartRepository = cartRepository;
+        this.cartItemRepository = cartItemRepository;
+        this.menuClient = menuClient;
+    }
+
     @Override
     public CartResponseDto getCartByCustomerId(Long customerId) {
-
         Cart cart = cartRepository.findByCustomerId(customerId)
-                .orElseThrow(() -> new RuntimeException("Cart not found"));
+                .orElseGet(() -> cartRepository.save(new Cart(customerId, 0L, BigDecimal.ZERO)));
 
         List<CartItemResponseDto> items = cartItemRepository.findByCartId(cart.getCartId())
                 .stream()
                 .map(CartItemMapper::entityToDto)
-                .collect(Collectors.toList());
+                .toList();
 
         return CartMapper.entityToDto(cart, items);
     }
 
-    //ADD ITEM
     @Override
-    public CartResponseDto addItemToCart(CartItemRequestDto dto) {
+    @Transactional
+    public CartResponseDto addItemToCart(Long customerId, CartItemRequestDto dto) {
+        log.info("Adding menuItemId={} to cart for customerId={}", dto.getMenuItemId(), customerId);
 
-        log.info("Adding item {} to cart for customer {}", dto.getMenuItemId(), dto.getCustomerId());
+        MenuItemSnapshotDto menuItem = menuClient.getMenuItemById(dto.getMenuItemId());
 
-        Cart cart = cartRepository.findByCustomerId(dto.getCustomerId())
+        if (menuItem == null) {
+            throw new RuntimeException("Menu item not found");
+        }
+
+        if (!menuItem.isAvailable()) {
+            throw new RuntimeException("Menu item is currently unavailable");
+        }
+
+        Cart cart = cartRepository.findByCustomerId(customerId)
                 .orElseGet(() -> {
-                    log.info("Creating new cart for customer {}", dto.getCustomerId());
-                    return cartRepository.save(
-                            new Cart(dto.getCustomerId(), dto.getRestaurantId())
-                    );
+                    log.info("Creating new cart for customerId={}", customerId);
+                    return cartRepository.save(new Cart(customerId, menuItem.getRestaurantId()));
                 });
 
-        if (!cart.getRestaurantId().equals(dto.getRestaurantId())) {
-            log.warn("Restaurant mismatch. Clearing cart for customer {}", dto.getCustomerId());
+        if (cart.getRestaurantId() != null
+                && cart.getRestaurantId() != 0L
+                && !cart.getRestaurantId().equals(menuItem.getRestaurantId())) {
+            log.warn("Customer tried adding item from another restaurant. customerId={} oldRestaurantId={} newRestaurantId={}",
+                    customerId, cart.getRestaurantId(), menuItem.getRestaurantId());
+
             cartItemRepository.deleteByCartId(cart.getCartId());
-            cart.setRestaurantId(dto.getRestaurantId());
+            cart.setRestaurantId(menuItem.getRestaurantId());
             cart.setTotalPrice(BigDecimal.ZERO);
+            cartRepository.save(cart);
+        } else if (cart.getRestaurantId() == null || cart.getRestaurantId() == 0L) {
+            cart.setRestaurantId(menuItem.getRestaurantId());
+            cartRepository.save(cart);
         }
 
         List<CartItem> items = cartItemRepository.findByCartId(cart.getCartId());
@@ -74,40 +95,41 @@ public class CartServiceImpl implements CartService {
                 .filter(item -> item.getMenuItemId().equals(dto.getMenuItemId()))
                 .findFirst();
 
+        BigDecimal effectivePrice = menuItem.getDiscountedPrice() != null
+                ? menuItem.getDiscountedPrice()
+                : menuItem.getPrice();
+
         if (existingItem.isPresent()) {
             CartItem item = existingItem.get();
             item.setQuantity(item.getQuantity() + dto.getQuantity());
             cartItemRepository.save(item);
-
-            log.info("Updated quantity for item {}", item.getMenuItemId());
-
+            log.info("Updated cart quantity for menuItemId={} customerId={}", dto.getMenuItemId(), customerId);
         } else {
-            CartItem newItem = CartItemMapper.dtoToEntity(dto, cart.getCartId());
+            CartItem newItem = new CartItem(
+                    cart.getCartId(),
+                    menuItem.getItemId(),
+                    menuItem.getName(),
+                    dto.getQuantity(),
+                    effectivePrice,
+                    dto.getCustomization()
+            );
             cartItemRepository.save(newItem);
-
-            log.info("Added new item {}", dto.getMenuItemId());
+            log.info("Added new cart item menuItemId={} customerId={}", dto.getMenuItemId(), customerId);
         }
 
-        BigDecimal total = cartItemRepository.findByCartId(cart.getCartId())
-                                            .stream()
-                                            .map(item -> item.getPrice().multiply(BigDecimal.valueOf(item.getQuantity())))
-                                            .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-        cart.setTotalPrice(total);
-        cartRepository.save(cart);
+        recalculateCartTotal(cart);
 
         List<CartItemResponseDto> responseItems = cartItemRepository.findByCartId(cart.getCartId())
                 .stream()
                 .map(CartItemMapper::entityToDto)
-                .collect(Collectors.toList());
+                .toList();
 
         return CartMapper.entityToDto(cart, responseItems);
     }
 
-    //REMOVE ITEM
     @Override
+    @Transactional
     public void removeItemFromCart(Long customerId, Long itemId) {
-
         Cart cart = cartRepository.findByCustomerId(customerId)
                 .orElseThrow(() -> new RuntimeException("Cart not found"));
 
@@ -119,13 +141,17 @@ public class CartServiceImpl implements CartService {
         }
 
         cartItemRepository.deleteById(itemId);
+        recalculateCartTotal(cart);
 
-        log.info("Removed item {} from cart", itemId);
+        log.info("Removed itemId={} from cart for customerId={}", itemId, customerId);
     }
 
-    //UPDATE QUANTITY
     @Override
+    @Transactional
     public CartItemResponseDto updateCartItemQuantity(Long customerId, Long itemId, Integer quantity) {
+        if (quantity == null || quantity < 1) {
+            throw new RuntimeException("Quantity must be at least 1");
+        }
 
         Cart cart = cartRepository.findByCustomerId(customerId)
                 .orElseThrow(() -> new RuntimeException("Cart not found"));
@@ -138,48 +164,55 @@ public class CartServiceImpl implements CartService {
         }
 
         item.setQuantity(quantity);
-        cartItemRepository.save(item);
+        CartItem updated = cartItemRepository.save(item);
+        recalculateCartTotal(cart);
 
-        log.info("Updated quantity for item {}", itemId);
-
-        return CartItemMapper.entityToDto(item);
+        log.info("Updated quantity for itemId={} quantity={} customerId={}", itemId, quantity, customerId);
+        return CartItemMapper.entityToDto(updated);
     }
 
-    //CLEAR CART
     @Override
+    @Transactional
     public void clearCart(Long customerId) {
-
         Cart cart = cartRepository.findByCustomerId(customerId)
                 .orElseThrow(() -> new RuntimeException("Cart not found"));
 
         cartItemRepository.deleteByCartId(cart.getCartId());
-
         cart.setTotalPrice(BigDecimal.ZERO);
         cartRepository.save(cart);
 
-        log.info("Cleared cart for customer {}", customerId);
+        log.info("Cleared cart for customerId={}", customerId);
     }
 
-    //CHANGE RESTAURANT
     @Override
-    public CartResponseDto changeRestaurant(CartRequestDto dto) {
+    @Transactional
+    public CartResponseDto changeRestaurant(Long customerId, CartRequestDto dto) {
+        Cart cart = cartRepository.findByCustomerId(customerId)
+                .orElseGet(() -> cartRepository.save(new Cart(customerId, dto.getRestaurantId())));
 
-        clearCart(dto.getCustomerId());
-
-        Cart cart = cartRepository.findByCustomerId(dto.getCustomerId())
-                .orElseThrow(() -> new RuntimeException("Cart not found"));
-
+        cartItemRepository.deleteByCartId(cart.getCartId());
         cart.setRestaurantId(dto.getRestaurantId());
+        cart.setTotalPrice(BigDecimal.ZERO);
         cartRepository.save(cart);
 
-        return getCartByCustomerId(dto.getCustomerId());
+        log.info("Changed cart restaurant for customerId={} restaurantId={}", customerId, dto.getRestaurantId());
+
+        return getCartByCustomerId(customerId);
     }
 
-    //PROMO (STUB)
     @Override
     public CartResponseDto applyPromoCode(Long customerId, String promoCode) {
-
-        log.info("Applying promo code {} for customer {}", promoCode, customerId);
+        log.info("Promo code '{}' requested for customerId={}", promoCode, customerId);
         return getCartByCustomerId(customerId);
+    }
+
+    private void recalculateCartTotal(Cart cart) {
+        BigDecimal total = cartItemRepository.findByCartId(cart.getCartId())
+                .stream()
+                .map(item -> item.getPrice().multiply(BigDecimal.valueOf(item.getQuantity())))
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        cart.setTotalPrice(total);
+        cartRepository.save(cart);
     }
 }
